dining room lamp update

--- a/config.json
+++ b/config.json
@@ -393,7 +393,8 @@
     {
       "name": "Dining Room Lamps",
       "ids": [
-        "Energenieg_"
+        "Energenieg_",
+        "Genericd_"
       ],
       "type": "433",
       "host": "downstairs",
