removed legacy config, added show free plugs to site

--- a/config.json
+++ b/config.json
@@ -393,7 +393,6 @@
     {
       "name": "Dining Room Lamps",
       "ids": [
-        "Energenieg_",
         "Genericd_"
       ],
       "type": "433",
@@ -1043,62 +1042,70 @@
       "upstairs": "192.168.0.194"
     },
     "espLightSwitch": {
-      "LightSwitcha_on": "15985185",
-      "LightSwitcha_off": "15985185",
-      "LightSwitcha_dim": "15985192",
-      "LightSwitcha_bright": "15985188",
-      "LightSwitchb_on": "14312289",
-      "LightSwitchb_off": "14312289",
-      "LightSwitchb_dim": "14312296",
-      "LightSwitchb_bright": "14312292",
+      "actions":{
+        "LightSwitcha_on": "15985185",
+        "LightSwitcha_off": "15985185",
+        "LightSwitcha_dim": "15985192",
+        "LightSwitcha_bright": "15985188",
+        "LightSwitchb_on": "14312289",
+        "LightSwitchb_off": "14312289",
+	"LightSwitchb_dim": "14312296",
+      	"LightSwitchb_bright": "14312292"
+      },
       "attempts": 1,
       "length": 24,
       "instructions": "press and hold center button, 1 flash - program on/off, 2 - dim, 3 - bright, 4 - clear"
     },
     "esp433Floureon": {
-      "Floureona_on": "10069996",
-      "Floureona_off": "10069988",
-      "Floureonb_on": "10069994",
-      "Floureonb_off": "10069986",
-      "Floureonc_on": "10069993",
-      "Floureonc_off": "10069985",
-      "Floureond_on": "10069997",
-      "Floureond_off": "10069989",
-      "Floureone_on": "10069995",
-      "Floureone_off": "10069987",
+      "actions":{
+        "Floureona_on": "10069996",
+        "Floureona_off": "10069988",
+        "Floureonb_on": "10069994",
+        "Floureonb_off": "10069986",
+        "Floureonc_on": "10069993",
+        "Floureonc_off": "10069985",
+        "Floureond_on": "10069997",
+        "Floureond_off": "10069989",
+        "Floureone_on": "10069995",
+        "Floureone_off": "10069987"
+      },
       "attempts": 3,
       "length": 24,
       "instructions": "press and hold button till flashing, press button to be assigned, had to do this near to transmitter. to reset: press and hold button while plugging in, flashes quickly then off"
     },
     "esp433Silvercrest": {
-      "Silvercresta_on": "13753456",
-      "Silvercresta_off": "14550672",
-      "Silvercrestb_on": "13753460",
-      "Silvercrestb_off": "14550676",
-      "Silvercrestc_on": "14445132",
-      "Silvercrestc_off": "14550684",
-      "Silvercrestd_on": "14198562",
-      "Silvercrestd_off": "14059698",
-      "Silvercrestall_on": "14198570",
-      "Silvercrestall_off": "14059706",
+      "actions":{
+        "Silvercresta_on": "13753456",
+        "Silvercresta_off": "14550672",
+        "Silvercrestb_on": "13753460",
+        "Silvercrestb_off": "14550676",
+        "Silvercrestc_on": "14445132",
+        "Silvercrestc_off": "14550684",
+        "Silvercrestd_on": "14198562",
+        "Silvercrestd_off": "14059698",
+        "Silvercrestall_on": "14198570",
+        "Silvercrestall_off": "14059706"
+      },
       "attempts": 1,
       "length": 24,
       "protocol": 4,
       "instructions": "plug in, press on while flashing to assign a button, press off to delete (first attempt seemed to need to use the all off to delete it)"
     },
     "esp433Generic": {
-      "Generica_on": "3444434333343333443344443",
-      "Generica_off": "3444434333343333443344433",
-      "Genericb_on": "3444434333343333443344343",
-      "Genericb_off": "3444434333343333443344333",
-      "Genericc_on": "3444434333343333443343443",
-      "Genericc_off": "3444434333343333443343433",
-      "Genericd_on": "3444434333343333443334443",
-      "Genericd_off": "3444434333343333443334433",
-      "Generice_on": "3444434333343343443334443",
-      "Generice_off": "3444434333343343443334433",
-      "Genericall_on": "3444434333343333443333433",
-      "Genericall_off": "3444434333343333443333343",
+      "actions":{
+        "Generica_on": "3444434333343333443344443",
+        "Generica_off": "3444434333343333443344433",
+        "Genericb_on": "3444434333343333443344343",
+        "Genericb_off": "3444434333343333443344333",
+        "Genericc_on": "3444434333343333443343443",
+        "Genericc_off": "3444434333343333443343433",
+        "Genericd_on": "3444434333343333443334443",
+        "Genericd_off": "3444434333343333443334433",
+        "Generice_on": "3444434333343343443334443",
+        "Generice_off": "3444434333343343443334433",
+        "Genericall_on": "3444434333343333443333433",
+        "Genericall_off": "3444434333343333443333343"
+      },
       "shortOnDelay": "0.00032",
       "shortOffDelay": "0.00032",
       "longOnDelay": "0.00090",
@@ -1109,53 +1116,43 @@
       "endDelay": "0.0087",
       "manual": true,
       "instructions": "status plugs",
-      "attempts": 3
-    },
-    "esp433EnergenieOld": {
-      "EnergenieOldf_on": "1111111111111111110000001",
-      "EnergenieOld_off": "1111111111111111101000011",
-      "shortOnDelay": "0.00024",
-      "shortOffDelay": "0.00055",
-      "longOnDelay": "0.00072",
-      "longOffDelay": "0.00012",
-      "bigOn": "0",
-      "bigOff": "0",
-      "extendedDelay": "0.00642",
-      "endDelay": "0.00587",
-      "manual": true,
-      "attempts": 3
+      "attempts": 10
     },
     "esp433Energenie": {
-      "Energeniea_on": "2952079",
-      "Energeniea_off": "2952078",
-      "Energenieb_on": "2952061",
-      "Energenieb_off": "2952060",
-      "Energeniec_on": "2952075",
-      "Energeniec_off": "2952074",
-      "Energenied_on": "2952073",
-      "Energenied_off": "2952072",
-      "Energeniee_on": "2952069",
-      "Energeniee_off": "2952068",
-      "Energenief_on": "2952065",
-      "Energenief_off": "2952064",
-      "Energenieg_on": "2952063",
-      "Energenieg_off": "2952062",
-      "Energenieall_on": "2952077",
-      "Energenieall_off": "2952076",
+      "actions":{
+        "Energeniea_on": "2952079",
+        "Energeniea_off": "2952078",
+        "Energenieb_on": "2952061",
+        "Energenieb_off": "2952060",
+        "Energeniec_on": "2952075",
+        "Energeniec_off": "2952074",
+        "Energenied_on": "2952073",
+        "Energenied_off": "2952072",
+        "Energeniee_on": "2952069",
+        "Energeniee_off": "2952068",
+        "Energenief_on": "2952065",
+        "Energenief_off": "2952064",
+        "Energenieg_on": "2952063",
+        "Energenieg_off": "2952062",
+        "Energenieall_on": "2952077",
+        "Energenieall_off": "2952076"
+      },
       "attempts": 3,
       "length": 24
     },
     "esp433X10": {
-      "x10a_on": "2133111113113333311111111333333333",
-      "x10a_off": "2133111113113333311311111331333333",
-      "x10b_on": "2133111113113333311131111333133333",
-      "x10b_off": "2133111113113333311331111331133333",
-      "x10c_on": "2133111113113333311113111333313333",
-      "x10c_off": "2133111113113333311313111331313333",
-      "x10d_on": "2133111113113333311133111333113333",
-      "x10d_off": "2133111113113333311333111331113333",
-      "x10dim": "2133111113113333331133111133113333",
-      "x10bright": "2133111113113333331113111133313333",
+      "actions":{
+        "x10a_on": "2133111113113333311111111333333333",
+        "x10a_off": "2133111113113333311311111331333333",
+        "x10b_on": "2133111113113333311131111333133333",
+        "x10b_off": "2133111113113333311331111331133333",
+        "x10c_on": "2133111113113333311113111333313333",
+        "x10c_off": "2133111113113333311313111331313333",
+        "x10d_on": "2133111113113333311133111333113333",
+        "x10d_off": "2133111113113333311333111331113333",
+        "x10dim": "2133111113113333331133111133113333",
+        "x10bright": "2133111113113333331113111133313333"
+      },
       "shortOnDelay": "0.00055",
       "shortOffDelay": "0.00055",
       "longOnDelay": "0.00170",
@@ -1168,8 +1165,10 @@
       "attempts": 3
     },
     "esp433twelvevolt": {
-      "twelvevolt_on": "3434343434443433443333333",
-      "twelvevolt_off": "3434343434443433334433333",
+      "actions":{
+        "twelvevolt_on": "3434343434443433443333333",
+        "twelvevolt_off": "3434343434443433334433333"
+      },
       "shortOnDelay": "0.00035",
       "shortOffDelay": "0.00035",
       "longOnDelay": "0.00115",
@@ -1180,86 +1179,6 @@
       "endDelay": "0.01056",
       "manual": true,
       "attempts": 3
-    },
-    "generic": {
-      "Legacygenerica_on": "3444434333343333443344443",
-      "Legacygenerica_off": "3444434333343333443344433",
-      "Legacygenericb_on": "3444434333343333443344343",
-      "Legacygenericb_off": "3444434333343333443344333",
-      "Legacygenericc_on": "3444434333343333443343443",
-      "Legacygenericc_off": "3444434333343333443343433",
-      "Legacygenericd_on": "3444434333343333443334443",
-      "Legacygenericd_off": "3444434333343333443334433",
-      "Legacygenerice_on": "3444434333343343443334443",
-      "Legacygenerice_off": "3444434333343343443334433",
-      "Legacygenericall_on": "3444434333343333443333433",
-      "Legacygenericall_off": "3444434333343333443333343",
-      "shortOnDelay": "0.00032",
-      "shortOffDelay": "0.00032",
-      "longOnDelay": "0.00090",
-      "longOffDelay": "0.00090",
-      "bigOn": "0",
-      "bigOff": "0",
-      "extendedDelay": "0.0096",
-      "endDelay": "0.0087"
-    },
-    "energenie": {
-      "Legacyenergeniea_on": "1111111111111111111000001",
-      "Legacyenergeniea_off": "1111111111111111111000011",
-      "Legacyenergenieb_on": "1111111111111111111010001",
-      "Legacyenergenieb_off": "1111111111111111111010011",
-      "Legacyenergeniec_on": "1111111111111111111001001",
-      "Legacyenergeniec_off": "1111111111111111111001011",
-      "Legacyenergenied_on": "1111111111111111111011001",
-      "Legacyenergenied_off": "1111111111111111111011011",
-      "Legacyenergeniee_on": "1111111111111111110011001",
-      "Legacyenergeniee_off": "1111111111111111101011011",
-      "Legacyenergenief_on": "1111111111111111110000001",
-      "Legacyenergenief_off": "1111111111111111101000011",
-      "Legacyenergenieg_on": "1101111111111111111011001",
-      "Legacyenergenieg_off": "1101111111111111111011011",
-      "Legacyenergenieall_on": "1111111111111111111000101",
-      "Legacyenergenieall_off": "1111111111111111111000111",
-      "shortOnDelay": "0.00024",
-      "shortOffDelay": "0.00055",
-      "longOnDelay": "0.00072",
-      "longOffDelay": "0.00012",
-      "bigOn": "0",
-      "bigOff": "0",
-      "extendedDelay": "0.00642",
-      "endDelay": "0.00587"
-    },
-    "x10": {
-      "Legacyx10a_on": "2133111113113333311111111333333333",
-      "Legacyx10a_off": "2133111113113333311311111331333333",
-      "Legacyx10b_on": "2133111113113333311131111333133333",
-      "Legacyx10b_off": "2133111113113333311331111331133333",
-      "Legacyx10c_on": "2133111113113333311113111333313333",
-      "Legacyx10c_off": "2133111113113333311313111331313333",
-      "Legacyx10d_on": "2133111113113333311133111333113333",
-      "Legacyx10d_off": "2133111113113333311333111331113333",
-      "Legacyx10dim": "2133111113113333331133111133113333",
-      "Legacyx10bright": "2133111113113333331113111133313333",
-      "shortOnDelay": "0.00055",
-      "shortOffDelay": "0.00055",
-      "longOnDelay": "0.00170",
-      "longOffDelay": "0.00170",
-      "bigOn": "0.00950",
-      "bigOff": "0.00500",
-      "extendedDelay": "0.01915",
-      "endDelay": "0.01745"
-    },
-    "twelvevolt": {
-      "Legacywaterfall_on": "3434343434443433443333333",
-      "Legacywaterfall_off": "3434343434443433334433333",
-      "shortOnDelay": "0.00035",
-      "shortOffDelay": "0.00035",
-      "longOnDelay": "0.00115",
-      "longOffDelay": "0.00115",
-      "bigOn": "0",
-      "bigOff": "0",
-      "extendedDelay": "0.01171",
-      "endDelay": "0.01056"
     },
     "global": {
       "transmitPin": 24
