scripts added to site to run locally, fix for volume changes, add ogg files to list

--- a/config.json
+++ b/config.json
@@ -130,7 +130,7 @@
     {
       "name": "Test",
       "ids": [
-        "Silvercresta_"
+        "Floureonb_"
       ],
       "type": "433",
       "host": "upstairs",
